--- a/multipeer-quiz-game/multipeer-quiz-game/Info.plist
+++ b/multipeer-quiz-game/multipeer-quiz-game/Info.plist
@@ -39,5 +39,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSMotionUsageDescription</key>
+	<string>Allow for motion.</string>
 </dict>
 </plist>
